# lab599-cat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/: cat-protocol-en.md  tx500-manual-en.md  tx500-manual-ru.md
examples/tui/: Cargo.toml
examples/tui/src/: app.rs  audio.rs  main.rs  radio.rs  state.rs  ui.rs
lab599-cat/: Cargo.toml  README.md
lab599-cat-core/: Cargo.toml
lab599-cat-core/src/: command.rs  error.rs  lib.rs  protocol.rs  response.rs  tests.rs
lab599-cat-core/tests/: decode_tests.rs  encode_tests.rs  error_codes_tests.rs  parsing_tests.rs  roundtrip_tests.rs
lab599-cat-device/: Cargo.toml
lab599-cat-device/src/: lib.rs  tx500.rs
lab599-cat-device/tests/: integration_tests.rs
lab599-cat/src/: driver.rs  error.rs  lib.rs  protocol.rs  response.rs  tx500.rs
lab599-cat/tests/: decode_tests.rs  encode_tests.rs  error_codes_tests.rs  integration_tests.rs  parsing_tests.rs  roundtrip_tests.rs
lab599-ctl/: Cargo.toml  README.md
lab599-ctl/src/: app.rs  app_config.rs  app_state.rs  app_utils.rs  args.rs  audio.rs  config.rs  main.rs  radio.rs  spectrum.rs  state.rs  ui.rs  util.rs
lab599-ctl/src/events/: action.rs  bus.rs
lab599-ctl/src/hardware/: audio.rs  audio_builder.rs  mod.rs  radio.rs  serial.rs  spectrum.rs
lab599-ctl/src/input/: keyboard.rs
lab599-ctl/src/pages/: help.rs  layout.rs  logs.rs  main.rs  mod.rs  page.rs  router.rs
lab599-ctl/src/services/: spectrum.rs
lab599-ctl/src/ui/: component.rs  layout.rs  mappers.rs  mod.rs  router.rs  ui_utils.rs  utils.rs
lab599-ctl/src/ui/components/: app_bar.rs  component.rs  error_log.rs  helpers.rs  mod.rs  radio_help.rs  radio_info.rs  smeter.rs  spectrum.rs  status_flags.rs  tui_help.rs
lab599-ctl/src/ui/components/spectrum/: component.rs  mod.rs  processor.rs
lab599-ctl/src/ui/pages/: help.rs  logs.rs  main.rs  mod.rs  page.rs  settings.rs
lab599-ctl/src/ui/widgets/: app_bar.rs  error_log.rs  mod.rs  radio_help.rs  radio_info.rs  settings.rs  smeter.rs  spectrum.rs  status_flags.rs  tui_help.rs
