[workspace]
members = ["lab599-cat", "lab599-ctl"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow     = "1.0.102"
clap       = { version = "4.6.1", features = ["derive"] }
cpal       = "0.17.3"
crossterm  = { version = "0.29.0", features = ["event-stream"] }
lab599-cat = { path = "lab599-cat" }
ratatui    = "0.30.0"
rustfft    = "6.2"
serialport = "4.9.0"
thiserror  = "2.0.18"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
