[package]
name = "lab599-ctl"
version = { workspace = true }
edition  = { workspace = true }

[[bin]]
name = "lab599"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
cpal       = { workspace = true }
crossterm  = { workspace = true }
lab599-cat = { workspace = true, features = ["tx500"] }
ratatui    = { workspace = true }
serialport = { workspace = true }
